Do a release build and run the tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,5 @@ addons:
     channel: latest/beta
 script:
   - sudo snap alias dotnet-sdk.dotnet dotnet
-  - dotnet --version
+  - dotnet build -c Release
+  - dotnet test
