--- a/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
+++ b/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
@@ -5,4 +5,8 @@
     <LangVersion>7.3</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Blazor-State" Version="1.0.0-3.0.100-preview8-013656-112" />
+  </ItemGroup>
+
 </Project>
