Begin to split components out into their own library

--- a/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
+++ b/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
@@ -12,6 +12,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TourOfHeroes.Data\TourOfHeroes.Data.csproj" />
+    <ProjectReference Include="..\TourOfHeroes.Components\TourOfHeroes.Components.csproj" />
   </ItemGroup>
 
 </Project>
