--- a/src/TourOfHeroes.Components/TourOfHeroes.Components.csproj
+++ b/src/TourOfHeroes.Components/TourOfHeroes.Components.csproj
@@ -6,10 +6,15 @@
     <LangVersion>8</LangVersion>
   </PropertyGroup>
 
+  <ItemGroup>
+      <PackageReference Include="Blazor-State" Version="1.1.5" />
+      <PackageReference Include="FluentValidation" Version="8.4.0" />
+  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Components" Version="3.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="3.0.0" />
+    <ProjectReference Include="..\TourOfHeroes.Data\TourOfHeroes.Data.csproj" />
   </ItemGroup>
 
 </Project>
