--- a/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
+++ b/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
@@ -6,7 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\TourOfHeroes.Components\TourOfHeroes.Components.csproj" />
+      <PackageReference Include="Blazor-State" Version="1.1.5" />
+      <PackageReference Include="FluentValidation" Version="8.4.0" />
+  </ItemGroup>
+
+
+  <ItemGroup>
+    <ProjectReference Include="..\TourOfHeroes.Data\TourOfHeroes.Data.csproj" />
   </ItemGroup>
 
 </Project>
