--- a/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
+++ b/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
@@ -8,6 +8,10 @@
   <ItemGroup>
       <PackageReference Include="Blazor-State" Version="1.1.5" />
       <PackageReference Include="FluentValidation" Version="8.4.0" />
+      <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7">
+        <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        <PrivateAssets>all</PrivateAssets>
+      </PackageReference>
   </ItemGroup>
 
 </Project>
