--- a/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
+++ b/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
@@ -4,6 +4,10 @@
     <TargetFramework>netcoreapp3.0</TargetFramework>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <RunWorkingDirectory>$(MSBuildProjectDirectory)</RunWorkingDirectory>
+  </PropertyGroup>
+
   <ItemGroup>
       <PackageReference Include="Blazor-State" Version="1.1.5" />
       <PackageReference Include="Blazored.Typeahead" Version="4.1.0" />
