Add SignalR service for Azure

--- a/src/TourOfHeroes.Web/appsettings.json
+++ b/src/TourOfHeroes.Web/appsettings.json
@@ -1,4 +1,9 @@
 {
+  "Azure": {
+    "SignalR": {
+      "ConnectionString": ""
+    }
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
