--- a/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
+++ b/src/TourOfHeroes.Web/TourOfHeroes.Web.csproj
@@ -11,6 +11,7 @@
   <ItemGroup>
       <PackageReference Include="Blazor-State" Version="1.1.5" />
       <PackageReference Include="Blazored.Typeahead" Version="4.1.0" />
+      <PackageReference Include="Microsoft.Azure.SignalR" Version="1.2.0" />
       <PackageReference Include="Microsoft.CodeAnalysis.FxCopAnalyzers" Version="2.9.7">
         <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         <PrivateAssets>all</PrivateAssets>
